WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184137
ArrayMode should not try to get the DFG to think it can convert TypedArrays
https://bugs.webkit.org/show_bug.cgi?id=184137
Summary
ArrayMode should not try to get the DFG to think it can convert TypedArrays
Keith Miller
Reported
2018-03-29 09:48:28 PDT
ArrayMode should not try to get the DFG to think it can convert TypedArrays
Attachments
Patch
(1.80 KB, patch)
2018-03-29 09:52 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.79 KB, patch)
2018-03-29 10:17 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2018-03-29 09:52:33 PDT
Created
attachment 336779
[details]
Patch
Saam Barati
Comment 2
2018-03-29 09:54:45 PDT
Comment on
attachment 336779
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336779&action=review
maybe add a microbenchmark?
> Source/JavaScriptCore/dfg/DFGArrayMode.cpp:121 > + // If we have seen multiple TypedArray types or a TypedArray and non-typed array it doesn't make sense to try to convert the array since we won't be able to when we have a typed array.
"If we have seen multiple TypedArray types or a TypedArray and non-typed array it doesn't make sense to try to convert the array since we won't be able to when we have a typed array." => "If we have seen multiple TypedArray types, or a TypedArray and non-typed array, it doesn't make sense to try to convert the array since you can't convert typed arrays."
Keith Miller
Comment 3
2018-03-29 10:17:13 PDT
Created
attachment 336782
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2018-03-29 12:09:05 PDT
Comment on
attachment 336782
[details]
Patch for landing Clearing flags on attachment: 336782 Committed
r230078
: <
https://trac.webkit.org/changeset/230078
>
WebKit Commit Bot
Comment 5
2018-03-29 12:09:07 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-03-29 12:10:22 PDT
<
rdar://problem/39008430
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug