ArrayMode should not try to get the DFG to think it can convert TypedArrays https://bugs.webkit.org/show_bug.cgi?id=184137

Reviewed by Saam Barati.

* dfg/DFGArrayMode.cpp:
(JSC::DFG::ArrayMode::fromObserved):


Canonical link: https://commits.webkit.org/199709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230078 268f45cc-cd09-0410-ab3c-d52691b4dbfc